--- a/PrototypeMapEditor/PrototypeMapEditor/PrototypeMapEditor.csproj
+++ b/PrototypeMapEditor/PrototypeMapEditor/PrototypeMapEditor.csproj
@@ -81,9 +81,14 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Camada.cs" />
     <Compile Include="Core\Mapa.cs" />
     <Compile Include="Core\MetadadoMapa.cs" />
+    <Compile Include="Core\ObjetoDoMapa.cs" />
     <Compile Include="CustomControls\MapDisplay.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CustomControls\MetadataDisplay.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="CustomControls\ObjectDisplay.cs">
@@ -100,6 +105,12 @@
     </Compile>
     <Compile Include="EditorForm\MapEditor.Designer.cs">
       <DependentUpon>MapEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditorForm\MetadataEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditorForm\MetadataEditor.Designer.cs">
+      <DependentUpon>MetadataEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Helper\IntHelper.cs" />
     <Compile Include="Helper\RectangleHelper.cs" />
@@ -158,6 +169,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EditorForm\MapEditor.resx">
       <DependentUpon>MapEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditorForm\MetadataEditor.resx">
+      <DependentUpon>MetadataEditor.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
