--- a/PrototypeMapEditor/PrototypeMapEditor/PrototypeMapEditor.csproj
+++ b/PrototypeMapEditor/PrototypeMapEditor/PrototypeMapEditor.csproj
@@ -81,10 +81,20 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Culture\CultureFacade.cs" />
     <Compile Include="Core\Layer.cs" />
     <Compile Include="Core\Map.cs" />
     <Compile Include="Core\MetadataMap.cs" />
     <Compile Include="Core\ObjectMap.cs" />
+    <Compile Include="CustomControls\Dialog\ExportMetadataMapDialog.cs" />
+    <Compile Include="CustomControls\Dialog\ImportMetadataMapDialog.cs" />
+    <Compile Include="CustomControls\ListBox\DragDropListBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CustomControls\ListBox\DroppedEventArgs.cs" />
+    <Compile Include="CustomControls\ListBox\IDragDropSource.cs" />
+    <Compile Include="CustomControls\ListBox\VisualCue.cs" />
+    <Compile Include="CustomControls\ListBox\Win32.cs" />
     <Compile Include="CustomControls\MapDisplay.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -118,6 +128,7 @@
     <Compile Include="EditorForm\MetadataEditor.Designer.cs">
       <DependentUpon>MetadataEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helper\FloatHelper.cs" />
     <Compile Include="Helper\ImageHelper.cs" />
     <Compile Include="Helper\IntHelper.cs" />
     <Compile Include="Helper\ObjectHelper.cs" />
@@ -131,7 +142,7 @@
     <Compile Include="IO\Serializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="MainGame.cs" />
     <Compile Include="WinformsGraphicDevice\GraphicsDeviceControl.cs">
       <SubType>Component</SubType>
     </Compile>
