--- a/PrototypeMapEditor/PrototypeMapEditor/PrototypeMapEditor.csproj
+++ b/PrototypeMapEditor/PrototypeMapEditor/PrototypeMapEditor.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Culture\CultureFacade.cs" />
+    <Compile Include="Core\Enum\DrawingMode.cs" />
     <Compile Include="Core\Layer.cs" />
     <Compile Include="Core\Map.cs" />
     <Compile Include="Core\MetadataMap.cs" />
@@ -104,6 +105,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="CustomControls\ObjectDisplay.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CustomControls\Radio\RadioListBox.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="EditorForm\LayerForm.cs">
@@ -204,6 +208,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
